fix: better spacing

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,33 +1,30 @@
-  .footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.footer {
+    text-align: center; // Center the content horizontally
     margin-top: 30px;
     @include breakpoint('small') {
-      padding-top: 40px;
+        padding-top: 40px;
     }
-  }
-  
-  .footer-social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .social-icon {
-    padding: 15px;
+}
+
+.footer-social {
+    display: inline-block; // Make the container inline-block to respect text alignment
+}
+
+.social-icon {
+    display: inline-block; // Make each icon inline-block
+    padding-left: 10px;
+    padding-right: 10px;
     a {
-      text-decoration: none;
-      img {
-        filter: brightness(0) invert(1);
-      }
-      &:hover {
         text-decoration: none;
         img {
-          filter: brightness(0) invert(1);
-          opacity: 0.9;
+            filter: brightness(0) invert(1);
         }
-      }
+        &:hover {
+            text-decoration: none;
+            img {
+                filter: brightness(0) invert(1);
+                opacity: 0.9;
+            }
+        }
     }
-  }
-  
+}
